Correction oubli vault

--- a/kubernetesonprem/argocd/shared/templates/shared.yaml
+++ b/kubernetesonprem/argocd/shared/templates/shared.yaml
@@ -16,6 +16,8 @@ spec:
       namespace: "monitoring"
     - server: "https://kubernetes.default.svc"
       namespace: "falco"
+    - server: "https://kubernetes.default.svc"
+      namespace: "vault"
   clusterResourceWhitelist:
     - group: "*"
       kind: "*"
