--- a/openshift/helm/station/templates/stationredis-deployment.yaml
+++ b/openshift/helm/station/templates/stationredis-deployment.yaml
@@ -1,5 +1,5 @@
-apiVersion: apps/v1
-kind: Deployment
+apiVersion: apps.openshift.io/v1
+kind: DeploymentConfig
 metadata:
   name: stationredis-deploy
   namespace: {{ .Release.Namespace | quote }}
