--- a/openshift/helm/station/templates/stationdb-pv.yaml
+++ b/openshift/helm/station/templates/stationdb-pv.yaml
@@ -1,22 +1,12 @@
 apiVersion: v1
-kind: PersistentVolume
+kind: PersistentVolumeClaim
 metadata:
   name: station-pv
   namespace: {{ .Release.Namespace | quote }}
 spec:
+  accessModes:
+    - ReadWriteOnce
+  resources:
+    requests:
+      storage: 5Gi
   storageClassName: {{ .Values.stationdb.storage.storageClass | quote}} 
-  capacity:
-    storage: {{ .Values.stationdb.storage.globalCapacity | quote}} 
-  accessModes: 
-    -  ReadWriteOnce
-  {{- if (eq .Values.stationdb.storage.storageClass "efs-sc")   }}
-  volumeMode: Filesystem
-  persistentVolumeReclaimPolicy: Retain
-  csi:
-    driver: efs.csi.aws.com
-    volumeHandle: "{{ .Values.stationdb.storage.efsid }}::{{ .Values.stationdb.storage.efsaccesspointid }}"
-  {{- end }}
-  {{- if (ne .Values.stationdb.storage.storageClass "efs-sc")   }} 
-  hostPath:
-    path: {{ .Values.stationdb.databaseData | quote  }} 
-  {{- end }}
