--- a/xldeploy/Jenkinsfile
+++ b/xldeploy/Jenkinsfile
@@ -1,16 +1,23 @@
+//serverCredentials : String
+// XL Deploy server credentials used to connect to the XL Deploy server. *
+// This must be configured under Manage Jenkins >> Configure System >> XL Deploy
  node {
         stage('Checkout') {
             git branch: "xldeploy", url: "https://github.com/kagzouli/StationDemoProject.git"
         }
 
-        //serverCredentials : String
-        // XL Deploy server credentials used to connect to the XL Deploy server. *
-        // This must be configured under Manage Jenkins >> Configure System >> XL Deploy
+        // Create the .dar to prepare it to deploy to XLDeploy
         stage('Create .dar'){
             xldCreatePackage artifactsPath: 'xldeploy/openshift', manifestPath: 'xldeploy/deployit-openshift-manifest.xml', darPath: 'stationdev_${BUILD_NUMBER}.dar'
         }
-        
+
+        // Deploy the .dar into the application XLDeploy
         stage('Publish .dar to XLD'){
             xldPublishPackage serverCredentials: 'xldeploy-cred', darPath: 'stationdev_${BUILD_NUMBER}.dar'
+        }
+
+        // Deploy to the right environment (dev)
+        stage('Deploy to env'){
+            xldDeploy serverCredentials: 'xldeploy-cred', environmentId: 'Environments/TEST/EXAKA/stationdev', packageId: 'Applications/TEST/EXAKA/station-app/1.4.1'
         }
 }
