--- a/xldeploy/Jenkinsfile
+++ b/xldeploy/Jenkinsfile
@@ -6,6 +6,12 @@
             git branch: "develop", url: "https://github.com/kagzouli/StationDemoProject.git"
         }
 
+        // Give service account right to namespace.
+        stage('Give right to namespace'){
+            oc adm policy add-scc-to-user anyuid -z station -n stationdev2
+            oc adm policy add-scc-to-user 20050-securityconstraints system:serviceaccount:stationdev2:station
+        }
+
         // Create the .dar to prepare it to deploy to XLDeploy
         stage('Create .dar'){
             xldCreatePackage artifactsPath: 'xldeploy/openshift', manifestPath: 'xldeploy/deployit-openshift-manifest.xml', darPath: 'stationdev_${BUILD_NUMBER}.dar'
