--- a/xldeploy/openshift/stationback-deployment.yaml
+++ b/xldeploy/openshift/stationback-deployment.yaml
@@ -49,7 +49,7 @@ spec:
           - name: DB_TRAFSTAT_DRIVERCLASS
             value: "com.mysql.jdbc.Driver"
           - name: DB_TRAFSTAT_MAXACTIVE
-            value: 15
+            value: "15"
           - name: DB_TRAFSTAT_USERNAME
             value: stationUser
           - name: DB_TRAFSTAT_PASSWORD
@@ -58,9 +58,9 @@ spec:
                 name: stationdb-secret
                 key: database-password
           - name: REDIS_HOSTNAME
-            value: tationredisservice.stationdev.svc.cluster.local
+            value: stationredisservice.stationdev.svc.cluster.local
           - name: REDIS_PORT
-            value: 6379
+            value: "6379"
           - name: REDIS_PASS 
             valueFrom:
               secretKeyRef:
