--- a/xldeploy/openshift/stationback-deployment.yaml
+++ b/xldeploy/openshift/stationback-deployment.yaml
@@ -58,7 +58,7 @@ spec:
                 name: stationdb-secret
                 key: database-password
           - name: REDIS_HOSTNAME
-            value: stationredisservice.stationdev.svc.cluster.local
+            value: stationredisservice.stationdev2.svc.cluster.local
           - name: REDIS_PORT
             value: "6379"
           - name: REDIS_PASS 
