--- a/application/spring-java/StationDemoWeb/src/main/resources/application.properties
+++ b/application/spring-java/StationDemoWeb/src/main/resources/application.properties
@@ -17,7 +17,7 @@ redis.port=${REDIS_PORT:6379}
 redis.password=${REDIS_PASS:test55}
 redis.usessl=${REDIS_USESSL:false}
 
-okta.issuerUrl=https://dev-884254.oktapreview.com/oauth2/default
+okta.issuerDomain=https://dev-yqv4qm6lycv6w51d.us.auth0.com
 
 # Security
 security.basic.enabled=false
