--- a/application/spring-java/StationDemoWeb/pom.xml
+++ b/application/spring-java/StationDemoWeb/pom.xml
@@ -79,14 +79,13 @@
 			<artifactId>java-jwt</artifactId>
 		</dependency>
 		<dependency>
-			<groupId>com.okta.jwt</groupId>
-			<artifactId>okta-jwt-verifier</artifactId>
+			<groupId>com.auth0</groupId>
+			<artifactId>jwks-rsa</artifactId>
 		</dependency>
 		<dependency>
-			<groupId>com.okta.jwt</groupId>
-			<artifactId>okta-jwt-verifier-impl</artifactId>
-		</dependency>
-		
+			<groupId>com.auth0</groupId>
+			<artifactId>java-jwt</artifactId>
+		</dependency>		
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-test</artifactId>
