--- a/application/spring-java/pom.xml
+++ b/application/spring-java/pom.xml
@@ -18,7 +18,8 @@
 	   <springboot.version>3.1.3</springboot.version>
 	   <springredis.version>3.0.1</springredis.version>
 	   <java-jwt.version>3.8.3</java-jwt.version>
-	   <okta-jwt.version>0.5.7</okta-jwt.version>
+	   <auth0-jwks-rsa.version>0.21.2</auth0-jwks-rsa.version>
+	   <auth0-java-jwt>4.4.0</auth0-java-jwt>
 	   <jacoco.version>0.8.8</jacoco.version>
 	   <mockito.version>4.8.1</mockito.version>
 	   <gitflow.version>1.0-m5.1</gitflow.version>
@@ -171,13 +172,13 @@
 		<!-- JWT   -->
 		<dependency>
 			<groupId>com.auth0</groupId>
-			<artifactId>java-jwt</artifactId>
-			<version>${java-jwt.version}</version>
+			<artifactId>jwks-rsa</artifactId>
+			<version>${auth0-jwks-rsa.version}</version>	
 		</dependency>
 		<dependency>
-			<groupId>com.okta.jwt</groupId>
-			<artifactId>okta-jwt-verifier</artifactId>
-			<version>${okta-jwt.version}</version>
+			<groupId>com.auth0</groupId>
+			<artifactId>java-jwt</artifactId>
+			<version>${auth0-java-jwt}</version>
 		</dependency>
 		<dependency>
 			<groupId>com.okta.jwt</groupId>
