Changement nouvelle configuration okta

--- a/application/spring-java/StationDemoWeb/src/test/resources/test.properties
+++ b/application/spring-java/StationDemoWeb/src/test/resources/test.properties
@@ -6,4 +6,4 @@ spring.datasource.username=sa
 spring.datasource.password=
 spring.datasource.driverClassName=org.h2.Driver
 
-okta.issuerUrl=https://dev-884254.oktapreview.com/oauth2/default
+okta.issuerUrl=https://dev-yqv4qm6lycv6w51d.us.auth0.com/oauth2/default
