--- a/openshift/helm/station/values.yaml
+++ b/openshift/helm/station/values.yaml
@@ -131,7 +131,7 @@ stationfront:
   
   
   #Okta URL
-  oktaUrl: https://dev-yqv4qm6lycv6w51d.okta.com
+  oktaUrl: https://dev-yqv4qm6lycv6w51d.us.auth0.com
 
   # Liste des ip alb du station front
   albiplist: []
