--- a/kubernetesaws/helm/awsvalue.yaml
+++ b/kubernetesaws/helm/awsvalue.yaml
@@ -31,7 +31,7 @@ image:
   tag: 1.5.0
  
   # Context path of the repo nexus url
-  repoNexusUrl: 'kagzouli3'
+  repoNexusUrl: 'kagzouli'
 
 secrets:
   # Mode can be 'internal' if it's for local development, 'aws' if it comes from AWS, and 'vault' for secure on premise
