--- a/openshift/helm/station/values.yaml
+++ b/openshift/helm/station/values.yaml
@@ -27,7 +27,7 @@ image:
   tag: 1.5.0
 
   # Context path of the repo nexus url
-  repoNexusUrl: 'kagzouli3'
+  repoNexusUrl: 'kagzouli'
 
 secrets:
  
