--- a/jenkins/deployWithDockerCompose/docker-compose.yml
+++ b/jenkins/deployWithDockerCompose/docker-compose.yml
@@ -59,7 +59,7 @@ services:
         condition: on-failure
     environment:
       - CLIENT_ID_TRAF_STAT=WcfX8ATlmstSllDzo0nCRqDQeWMcfu2A
-      - OKTA_URL=https://dev-yqv4qm6lycv6w51d.us.auth0.com
+      - OKTA_URL=dev-yqv4qm6lycv6w51d.us.auth0.com
       - CONTEXT_BACK_URL=http://51.254.36.120:4000
     ports:
         - "80:8080"
