--- a/application/spring-java/StationDemoWeb/pom.xml
+++ b/application/spring-java/StationDemoWeb/pom.xml
@@ -133,6 +133,7 @@
     			<groupId>org.apache.maven.plugins</groupId>
     			<artifactId>maven-surefire-plugin</artifactId>
  				<configuration>
+					<forkCount>1</forkCount>
         			<reuseForks>false</reuseForks>
     			</configuration>
   			 </plugin>
