--- a/openshift/helm/station/templates/stationfront-route.yaml
+++ b/openshift/helm/station/templates/stationfront-route.yaml
@@ -2,6 +2,7 @@ apiVersion: route.openshift.io/v1
 kind: Route
 metadata:
   name: stationfront-route
+  namespace: {{ .Release.Namespace | quote }}
 spec:
   host: {{ .Values.stationfront.hostname }}
   path: /station-angular4-poc
