Add environment variable

--- a/loadTest/python3/.env
+++ b/loadTest/python3/.env
@@ -1,2 +1,2 @@
 #PROMETHEUS_API_URL="http://prometheus.exakaconsulting.org/api/v1"
-PROMETHEUS_API_URL="{{PROMETHEUS_URL}}"
+PROMETHEUS_API_URL={{PROMETHEUS_URL}}
