--- a/application/spring-java/StationDemoWeb/pom.xml
+++ b/application/spring-java/StationDemoWeb/pom.xml
@@ -58,9 +58,9 @@
     		<artifactId>validation-api</artifactId>
  		</dependency>
  		<dependency>
-       		<groupId>org.hibernate</groupId>
-       		<artifactId>hibernate-validator</artifactId>
-    	</dependency>
+        	<groupId>org.hibernate.validator</groupId>
+        	<artifactId>hibernate-validator</artifactId>
+     	 </dependency>
     	
     	<dependency>
 			<groupId>org.springframework.data</groupId>
