--- a/application/spring-java/pom.xml
+++ b/application/spring-java/pom.xml
@@ -4,7 +4,7 @@
 	<parent>
 		<groupId>org.springframework.boot</groupId>
 		<artifactId>spring-boot-dependencies</artifactId>
-		<version>3.5.9</version>
+		<version>4.0.1</version>
 	</parent>
 	<groupId>com.exakaconsulting.poc</groupId>
 	<artifactId>StationDemoProject</artifactId>
@@ -13,15 +13,13 @@
 	<properties>
 	   <java.version>17</java.version>
 	   <springdocopenapi.version>1.6.14</springdocopenapi.version>
-	   <jakarta-servlet.version>6.0.0</jakarta-servlet.version>
 	   <springbatch.version>5.0.0</springbatch.version>
-	   <springboot.version>3.1.3</springboot.version>
-	   <springredis.version>3.5.7</springredis.version>
+	   <springboot.version>4.0.1</springboot.version>
+	   <springredis.version>4.0.1</springredis.version>
 	   <java-jwt.version>3.8.3</java-jwt.version>
 	   <auth0-jwks-rsa.version>0.21.2</auth0-jwks-rsa.version>
 	   <auth0-java-jwt>4.4.0</auth0-java-jwt>
 	   <jacoco.version>0.8.8</jacoco.version>
-	   <mockito.version>4.8.1</mockito.version>
 	   <gitflow.version>1.0-m5.1</gitflow.version>
 	   <urlrewriterfilter.version>4.0.4</urlrewriterfilter.version>
 	   <validationapi.version>2.0.1.Final</validationapi.version>
@@ -164,10 +162,11 @@
 		
 		 <!-- Hibernate validator -->
 		<dependency>
-       		<groupId>org.hibernate</groupId>
-       		<artifactId>hibernate-validator</artifactId>
-       		<version>${hibernate-validator.version}</version>
-    	</dependency>
+        	<groupId>org.hibernate.validator</groupId>
+        	<artifactId>hibernate-validator</artifactId>
+        	<version>${hibernate-validator.version}</version>
+     	 </dependency>
+
 
 		<!-- JWT   -->
 		<dependency>
