--- a/application/spring-java/StationDemoWeb/pom.xml
+++ b/application/spring-java/StationDemoWeb/pom.xml
@@ -54,9 +54,10 @@
  		</dependency>
  		
  		<dependency>
-    		<groupId>javax.validation</groupId>
-    		<artifactId>validation-api</artifactId>
- 		</dependency>
+        	<groupId>jakarta.validation</groupId>
+        	<artifactId>jakarta.validation-api</artifactId>
+      	</dependency>
+
  		<dependency>
         	<groupId>org.hibernate.validator</groupId>
         	<artifactId>hibernate-validator</artifactId>
