--- a/application/spring-java/StationDemoWeb/pom.xml
+++ b/application/spring-java/StationDemoWeb/pom.xml
@@ -139,6 +139,20 @@
     			</configuration>
   			 </plugin>
 
+			<plugin>
+				<groupId>org.jacoco</groupId>
+				<artifactId>jacoco-maven-plugin</artifactId>
+				<version>${jacoco.version}</version>
+				<executions>
+            		<execution>
+                		<id>prepare-agent</id>
+                		<goals>
+                    		<goal>prepare-agent</goal>
+                    	</goals>
+                	</execution>
+            	</executions>
+			</plugin>		
+
 		</plugins>
 	</build>
 
